test/src/e2e_vm_tests/test_programs/should_fail/type_alias_private/src/main.sw
script;

mod lib;

fn foo(x: lib::Alias) {}

fn main() {
    foo();
}
